--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
     font-size: 2.5vw;
   }
   ul li a::after {
-    content: '';
-    display: block;
+    content: ''; /* 반드시 이게 쓰여야 after가 작동된다 */
+    display: block; /*after 는 기본적으로 inline이므로 */
     position: absolute;
     bottom: 0;
     z-index: -1;
@@ -47,4 +47,10 @@
     height: 1vw;
     background: #5d8cef;
     left: 50%;
+}
+
+
+.menu2 > li::after {
+    content: "|";
+    margin: 0px 5px;
 }
